--- a/src/controller/.cpanel.yml
+++ b/src/controller/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home2/tuxmlcom/public_html
-    - /bin/cp -r * $DEPLOYPATH
+    - export DEPLOYPATH=/home/jesus/public_html
+    - /bin/cp -r . $DEPLOYPATH
